# niadic_py

./: MANIFEST.in  agents.md  changelog.md  example.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
docs/: index.html  niadic_py.html  search.js
niadic_py/: __init__.py
niadic_py/data/: __init__.py
niadic_py/services/: file_service.py  tokenizer_service.py
niadic_py/utils/: csv_utils.py
scripts/: generate_documents.sh
